tests/miniJava/neg/000742_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = extends int [ 0 ] ; } }
